Simplifica pom.xml e melhora build.yml